--- a/main.css
+++ b/main.css
@@ -21,14 +21,20 @@ main {
     padding: 1rem 6rem;
     background: thistle;
 }
-button {
-    background: var(--button);
+.copy-hex, .project-yt-link, .generator-button {
+    background: var(--darkback);
+    padding: 0.5rem;
+    color: white;
+    border-color: white;
 }
-.lock-toggle {
-    background: var(--button);
+.copy-hex {
+    padding: 0.5rem;
 }
 
+
 a {
+    border-color: white;
+    color: white;
     text-decoration: none;
 }
 
